<resources>
    <string name="app_name">ONGAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="news">Ultimas novedades</string>

    <string name="mensaje_Bienvenidos">Bienvenidos</string>

    <string name="retry">Ha ocurrido un error obteniendo la información</string>

    <string name="tittleTestimonio">Testimonios</string>
    <string name="ver_mas_testimonios">Ver mas testimonios</string>
    <string name="novedades">Novedades</string>
    <string name="contribuir">¿Quieres Contribuir?</string>
    <string name="donar">donar</string>
    <string name="miembros">¡Nuestro Staff!</string>
    <string name="contactate">¡Contactate con nosotros!</string>
    <string name="nombreYApellido">Nombre Y Apellido</string>
    <string name="email">Email</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar mensaje</string>

    <string name="mensaje_error_contacto">Ha ocurrido un error. Intete nuevamente mas tarde.</string>
    <string name="detalle">Detalle</string>
    <string name="text_email">Email</string>
    <string name="text_contrase_a">Contraseña</string>
    <string name="text_iniciar_sesion">Iniciar sesion</string>
    <string name="text_ha_olvidado_su_contrase_a">¿Ha olvidado su contraseña?</string>
    <string name="text_ingrese_con">Ingrese con</string>
    <string name="linkedin">linkedin</string>
    <string name="facebook">Facebook</string>
    <string name="descripcion">descripcion</string>
    <string name="nombre">Nombre</string>
    <string name="Detalle">Detalle</string>

    <string name="facebook_app_id">384594340512386</string>
    <string name="fb_login_protocol_scheme">fb384594340512386</string>
    <string name="facebook_client_token">a0299d0962a319e35ee9e28abf086172</string>

    <string name="cuenta">No tienes cuenta? Registrate</string>


    <string name="error_login">Ha ocurrido un error. Verifica tu email y tu contraseña</string>

    <string name="logo_content_description">SOMOS MAS</string>

</resources>