<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactoFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    >

    <TextView
        android:id="@+id/tv_contribuir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contribuir"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_donar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/donar"

        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tv_contribuir" />

    <TextView
        android:id="@+id/tv_contactate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactate"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_donar"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombreYApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_contactate"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_nombreYApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreYApellido"

        android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_nombreYApellido"
        android:layout_marginTop="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"

            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje"
        tools:text=""


        android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/enviar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_mensaje"


        />

</androidx.constraintlayout.widget.ConstraintLayout>